--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
-file.reference.Aula01-public_html=../Aula01/public_html
-file.reference.Aula01-test=../Aula01/test
+file.reference.Aula01-public_html=public_html
+file.reference.Aula01-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.Aula01-public_html}
 test.folder=${file.reference.Aula01-test}
