--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,11 +1,7 @@
-auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
-auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
-auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
-auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
-auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
-auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 file.reference.Aula01-public_html=public_html
 file.reference.Aula01-test=test
-file.reference.Cusodev6nna-public_html=public_html
+file.reference.cursodev6nna-public_html=public_html
+file.reference.cursodev6nna-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.Cusodev6nna-public_html}
+site.root.folder=${file.reference.cursodev6nna-public_html}
+test.folder=${file.reference.cursodev6nna-test}
