--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,15 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+browser.autorefresh.Chrome=true
+browser.highlightselection.Chrome=true
+browser.run=true
 file.reference.Aula01-public_html=public_html
 file.reference.Aula01-test=test
 file.reference.cursodev6nna-public_html=public_html
 file.reference.cursodev6nna-test=test
+file.reference.Cusodev6nna-public_html=public_html
+file.reference.Cusodev6nna-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.cursodev6nna-public_html}
-test.folder=${file.reference.cursodev6nna-test}
+site.root.folder=${file.reference.Cusodev6nna-public_html}
+start.file=Aula 02, 21-08-2018/index.html
+test.folder=${file.reference.Cusodev6nna-test}
+web.context.root=/Cusodev6nna
